переписал фильтры, использовал mapper